<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:context="com.alexbelogurow.dbcoursework.activity.patient.ActivityAddPatient"
                                            tools:showIn="@layout/activity_add_patient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_patient_male"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ico_color="@color/defualtPick"
                app:ico_icon="faw-male"
                app:ico_size="64dp" />

            <ImageView
                android:id="@+id/image_patient_female"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ico_color="@color/defualtPick"
                app:ico_icon="faw-female"
                app:ico_size="64dp" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:id="@+id/text_input_patient_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_patient_pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick"
                android:layout_margin="4dp"
                android:textAllCaps="false"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_patient_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/address"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_patient_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/job"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/blood_type"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <Spinner
                android:entries="@array/blood_type"
                android:id="@+id/spinner_blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rh_factor"
                android:textSize="16dp"
                android:layout_weight="1"/>

            <Spinner
                android:entries="@array/rh_factor"
                android:id="@+id/spinner_rh_factor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_patient_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/comments"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/add_doctor_for_patient"
            android:id="@+id/button_add_doctor_for_patient"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>