<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alexbelogurow.dbcoursework.activity.doctor.ActivityAddDoctor"
    tools:showIn="@layout/activity_add_doctor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_doctor_male"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ico_color="@color/defualtPick"
                app:ico_icon="faw-male"
                app:ico_size="64dp" />

            <ImageView
                android:id="@+id/image_doctor_female"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ico_color="@color/defualtPick"
                app:ico_icon="faw-female"
                app:ico_size="64dp" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:id="@+id/text_input_doctor_birth_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_doctor_pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick"
                android:layout_margin="4dp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:id="@+id/text_input_doctor_practise_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/practise_began_date"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_doctor_pick_practise_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick"
                android:layout_margin="4dp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_doctor_specialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/specialization"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/title_activity_add_doctor"
            android:id="@+id/button_add_doctor"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
