<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alexbelogurow.dbcoursework.activity.diagnosis.AddDiagnosesActivity"
    tools:showIn="@layout/activity_add_diagnoses">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_icd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_edit_icd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/icd"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_diagnosis_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_edit_diagnosis_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/diagnosis_name"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_add_treatment_for_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_add_treatment_for_diagnoses"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
